# api-composer-prototype

./: .env.sample  .gitignore  README.md  pyproject.toml  requirements.txt
api_composer/: api_client.py  app.py  hawk.py  settings.py
