[tool.poetry]
name = "api-composer-prototype"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.8.0"
mohawk = "^1.1.0"
fastapi = "^0.44.0"
uvicorn = "^0.10.8"
ujson = "^1.35"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
